# idgraph

./: README.md  pyproject.toml
src/idgraph/: __init__.py  core.py
tests/: test_core.py
