[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "idgraph"
version = "0.1.0"
description = "Build identity/entity graphs from shared signals (email, device, document) and surface synthetic-identity rings — zero dependencies."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Sudhir Vissa" }]

[tool.setuptools.packages.find]
where = ["src"]
